@@ -28,7 +28,7 @@ public class SetCommand implements ICommand {
             return ERR_WRONG_ARGS;
         }
 
-        String key = args.get(0);
+        String key = args.getFirst();
         String value = args.get(1);
         long ttlMillis = -1; // -1 means no expiry
         boolean nx = false;
